fixed index bg-image not showing on safari

--- a/_sass/partials/_footer.scss
+++ b/_sass/partials/_footer.scss
@@ -1,5 +1,5 @@
-
-/*body {
+/*
+body {
   @include flexbox-display-flex;
   @include flexbox-direction-column;
   min-height: 100vh;
